--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -5,6 +5,68 @@
 * @date 	2015-11-23
 * @version 	v0.0.1
 */
+.fgrey, .hd {
+  color: #3e3f3f; }
+
+.fgreen {
+  color: #37b4b3; }
+
+.pleft20 {
+  padding-left: 20px; }
+
+.b, .strong {
+  font-weight: bold; }
+
+a {
+  color: #3e3f3f; }
+
+a:hover {
+  color: #37b4b3; }
+
+input[type="text"] {
+  height: 34px;
+  border: 1px solid #dcdcdc;
+  border-radius: 6px; }
+
+img {
+  vertical-align: middle; }
+
+.bg-grey {
+  background: #f9f9f9; }
+
+.btn {
+  height: 38px;
+  border-radius: 6px;
+  display: inline-block;
+  padding: 0 16px;
+  font-size: 14px;
+  line-height: 38px;
+  text-align: center; }
+
+.btn-green {
+  color: #fff;
+  background: #37b4b3; }
+
+.search .inpt-search {
+  width: 520px;
+  margin-right: 10px;
+  text-indent: 5px; }
+.search .search-key {
+  line-height: 30px; }
+  .search .search-key a {
+    color: #3e3f3f;
+    display: inline-block;
+    padding: 0 3px; }
+.search select {
+  height: 36px;
+  width: 330px;
+  line-height: 36px;
+  border-radius: 6px;
+  border: 1px solid #dcdcdc;
+  text-indent: 5px;
+  background: #fff url("../img/droparr.jpg") 310px center no-repeat;
+  -webkit-appearance: none; }
+
 .wrap {
   width: 1166px;
   margin: 0 auto;
@@ -12,7 +74,6 @@
   z-index: 5; }
 
 .header {
-  height: 106px;
   color: #fff;
   font-size: 14px;
   background: #292929; }
@@ -56,23 +117,25 @@
         .header .top .drop a:hover {
           color: #37b4b3;
           background: #fff; }
-  .header .mainnav h1 {
-    float: left;
-    padding-top: 14px; }
-  .header .mainnav .nav {
-    width: 490px;
-    float: right;
-    padding-top: 20px; }
-    .header .mainnav .nav li {
-      float: left; }
-      .header .mainnav .nav li a {
-        height: 30px;
-        display: inline-block;
-        padding: 0 20px;
-        line-height: 30px; }
-      .header .mainnav .nav li.on a {
-        border-radius: 5px;
-        background: #36b4b6; }
+  .header .mainnav {
+    height: 70px; }
+    .header .mainnav h1 {
+      float: left;
+      padding-top: 14px; }
+    .header .mainnav .nav {
+      width: 490px;
+      float: right;
+      padding-top: 20px; }
+      .header .mainnav .nav li {
+        float: left; }
+        .header .mainnav .nav li a {
+          height: 30px;
+          display: inline-block;
+          padding: 0 20px;
+          line-height: 30px; }
+        .header .mainnav .nav li.on a {
+          border-radius: 5px;
+          background: #36b4b6; }
   .header a {
     color: #fff; }
 
@@ -184,38 +247,216 @@
       color: #fff;
       font-size: 14px; }
 
-.footer {
-  padding-top: 60px;
-  overflow: hidden;
+.footer-index {
   color: #fff;
-  background: #292929; }
-  .footer a {
+  background: #292929;
+  padding-top: 60px;
+  overflow: hidden; }
+  .footer-index a {
     color: #fff; }
-  .footer .foot-logo {
+  .footer-index .foot-logo {
     width: 212px;
     float: left;
     margin-right: 20px;
     text-align: center; }
-  .footer .foot-item {
+  .footer-index .foot-item {
     float: left;
     padding-left: 50px;
     line-height: 30px;
     border-left: 1px dashed #545454;
     font-size: 14px; }
-    .footer .foot-item .tit {
+    .footer-index .foot-item .tit {
       font-size: 16px; }
-    .footer .foot-item ul {
+    .footer-index .foot-item ul {
       width: 146px;
       float: left; }
-  .footer .foot-pro {
+  .footer-index .foot-pro {
     width: 300px; }
-  .footer .foot-plan {
+  .footer-index .foot-plan {
     width: 134px; }
-  .footer .foot-about {
+  .footer-index .foot-about {
     width: 106px; }
-  .footer .copyright {
+  .footer-index .copyright {
     clear: both;
     padding: 60px 0 20px;
     text-align: center; }
+
+.footer {
+  height: 37px;
+  line-height: 37px;
+  color: #fff;
+  text-align: center;
+  background: #4d4d4d; }
+
+/* 内页公用 */
+div.nav {
+  height: 43px;
+  border-bottom: 2px solid #b1b1b1;
+  padding-top: 12px;
+  background: #fff; }
+  div.nav li {
+    float: left; }
+    div.nav li a {
+      height: 30px;
+      width: 82px;
+      display: block;
+      padding-left: 10px;
+      line-height: 30px;
+      color: #353535;
+      font-size: 14px;
+      text-align: left; }
+      div.nav li a.on {
+        color: #fff;
+        background: url("../img/nav_bg.png") no-repeat; }
+        div.nav li a.on:hover {
+          color: #fff; }
+      div.nav li a:hover {
+        color: #37b4b3; }
+
+.sidebar {
+  height: 100%;
+  width: 160px;
+  padding-top: 14px;
+  float: left;
+  background: #f9f9f9; }
+  .sidebar ul li {
+    line-height: 40px;
+    font-size: 14px; }
+    .sidebar ul li a {
+      color: #3e3f3f;
+      display: block;
+      padding-left: 20px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      -o-text-overflow: ellipsis;
+      overflow: hidden; }
+      .sidebar ul li a.on {
+        border-left: 2px solid #37b4b3;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+        box-sizing: border-box;
+        background: #e0fbfb; }
+      .sidebar ul li a:hover {
+        background: #e7fafa; }
+  .sidebar ul ul {
+    padding: 3px 0; }
+    .sidebar ul ul li {
+      line-height: 30px; }
+      .sidebar ul ul li a {
+        padding-left: 30px; }
+
+.main {
+  padding: 14px 0 14px 20px;
+  margin-left: 160px;
+  background: #fff; }
+
+.hd {
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 26px; }
+  .hd.fgreen {
+    padding: 20px 0 5px; }
+
+.bd li {
+  padding-left: 15px;
+  color: #3e3f3f;
+  font-size: 14px;
+  line-height: 36px;
+  background: url("../img/dot.gif") 0 15px no-repeat;
+  /*.con {margin-left: -15px;}*/ }
+.bd .tit {
+  font-size: 14px; }
+.bd .con {
+  font-size: 12px;
+  line-height: 22px; }
+
+.iframe {
+  height: 100%;
+  width: 100%; }
+
+/*在线提交*/
+.online .tips {
+  padding: 3px 5px;
+  color: #7e7c77;
+  background: #fdf5e8; }
+.online .item {
+  padding: 10px 0;
+  line-height: 36px; }
+  .online .item label {
+    width: 70px;
+    display: inline-block;
+    text-align: right;
+    vertical-align: top; }
+  .online .item input[type="text"] {
+    text-indent: 5px; }
+  .online .item select {
+    height: 36px;
+    width: 330px;
+    line-height: 36px;
+    border-radius: 6px;
+    border: 1px solid #dcdcdc;
+    text-indent: 5px;
+    background: #fff url("../img/droparr.jpg") 310px center no-repeat;
+    -webkit-appearance: none; }
+  .online .item .textarea {
+    height: 130px;
+    width: 326px;
+    border: 1px solid #dcdcdc;
+    border-radius: 6px; }
+  .online .item .btn {
+    padding: 0 35px; }
+.online .upload input {
+  width: 265px; }
+.online .pin input {
+  width: 94px; }
+
+/*资源*/
+.source .hd {
+  border-bottom: 1px solid #dcdcdc;
+  padding: 25px 0 5px; }
+.source .bd {
+  padding: 10px 0;
+  overflow: hidden; }
+  .source .bd .item {
+    width: 216px;
+    padding: 10px;
+    float: left;
+    margin: 0 10px 10px 0;
+    border: 1px solid #dcdcdc;
+    border-radius: 5px; }
+    .source .bd .item:nth-child(4n) {
+      margin: 0 0 10px 0; }
+  .source .bd .img {
+    margin-bottom: 10px;
+    position: relative; }
+    .source .bd .img .mask {
+      height: 28px;
+      width: 214px;
+      display: block;
+      position: absolute;
+      bottom: 0;
+      color: #fff;
+      font-size: 0;
+      overflow: hidden;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: 5; }
+      .source .bd .img .mask a {
+        height: 28px;
+        width: 107px;
+        display: inline-block;
+        color: #fff;
+        font-size: 12px;
+        line-height: 28px;
+        text-align: center;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+        box-sizing: border-box; }
+        .source .bd .img .mask a:first-child {
+          border-right: 1px solid #dcdcdc; }
+    .source .bd .img img {
+      height: 127px;
+      width: 214px; }
 
 /*# sourceMappingURL=style.css.map */
