--- a/frontend/sass/style.scss
+++ b/frontend/sass/style.scss
@@ -5,9 +5,65 @@
 * @version 	v0.0.1
 */
 $fgrey: #555454;
+@mixin boxSizing {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+}
+.fgrey {color: #3e3f3f;}
+.fgreen {color: #37b4b3;}
+.pleft20 {padding-left: 20px;}
+.b,.strong {font-weight: bold;}
+a {color: #3e3f3f;}
+a:hover {color: #37b4b3;}
+input[type="text"] {
+	height: 34px;
+	border: 1px solid #dcdcdc;
+	border-radius: 6px;
+}
+img {vertical-align: middle;}
+.bg-grey {background: #f9f9f9;}
+.btn {
+	height: 38px;
+	border-radius: 6px;
+	display: inline-block;
+	padding: 0 16px;
+	font-size: 14px;
+	line-height: 38px;
+	text-align: center;
+}
+.btn-green {
+	color: #fff;
+	background: #37b4b3;
+}
+.search {
+	.inpt-search {
+		width: 520px;
+		margin-right: 10px;
+		text-indent: 5px;
+	}
+	.search-key {
+		line-height: 30px;
+		a {
+			color: #3e3f3f;
+			display: inline-block;
+			padding: 0 3px;
+		}
+	}
+	select{
+		height: 36px;
+		width: 330px;
+		line-height: 36px;
+		border-radius: 6px;
+		border: 1px solid #dcdcdc;
+		text-indent: 5px;
+		background: #fff url("../img/droparr.jpg") 310px center no-repeat;
+		-webkit-appearance: none
+	}		
+}
 .wrap {width: 1166px;margin: 0 auto;position: relative;z-index: 5;}
 .header {
-	height: 106px;
 	color: #fff;
 	font-size: 14px;
 	background: #292929;
@@ -59,6 +115,7 @@ $fgrey: #555454;
 		}
 	}
 	.mainnav {
+		height: 70px;
 		h1 {
 			float: left;
 			padding-top: 14px;
@@ -195,11 +252,11 @@ $fgrey: #555454;
 		}
 	}
 }
-.footer {
-	padding-top: 60px;
-	overflow: hidden;
+.footer-index {
 	color: #fff;
 	background: #292929;
+	padding-top: 60px;
+	overflow: hidden;
 	a {color: #fff;}
 	.foot-logo {
 		width: 212px;
@@ -229,4 +286,199 @@ $fgrey: #555454;
 		padding: 60px 0 20px ;
 		text-align: center;
 	}
+}
+.footer {
+	height: 37px;
+	line-height: 37px;
+	color: #fff;
+	text-align: center;
+	background: #4d4d4d;
+}
+/* 内页公用 */
+div.nav {
+	height: 43px;
+	border-bottom: 2px solid #b1b1b1;
+	padding-top: 12px;
+	background: #fff;
+	li {
+		float: left;
+		a {
+			height: 30px;
+			width: 82px;
+			display: block;
+			padding-left: 10px;
+			line-height: 30px;
+			color: #353535;
+			font-size: 14px;
+			text-align: left;
+			&.on {
+				color: #fff;
+				background: url('../img/nav_bg.png') no-repeat;
+				&:hover{
+					color: #fff;
+				}
+			}
+			&:hover {
+				color: #37b4b3;
+			}
+		}
+	}
+}
+.sidebar {
+	height: 100%;
+	width: 160px;
+	padding-top: 14px;
+	float: left;
+	background: #f9f9f9;
+	ul {
+		li {
+			line-height: 40px;
+			font-size: 14px;
+			a {
+				color: #3e3f3f;
+				display: block;
+				padding-left: 20px;
+				white-space:nowrap;
+				text-overflow:ellipsis; 
+				-o-text-overflow:ellipsis;
+				overflow: hidden;
+				&.on {
+					border-left: 2px solid #37b4b3;
+					@include boxSizing;
+					background: #e0fbfb;
+				}
+				&:hover {
+					background: #e7fafa;
+				}
+			}
+
+		}
+		ul {
+			padding: 3px 0;
+			li {
+				line-height: 30px;
+
+				a {
+					padding-left: 30px;
+				}
+			}
+		}
+	}	
+}
+.main {
+	padding: 14px 0 14px 20px;
+	margin-left: 160px;
+	background: #fff;
+}
+
+.hd {
+	@extend .fgrey;
+	font-size: 14px;
+	font-weight: bold;
+	line-height: 26px;
+	&.fgreen{padding: 20px 0 5px;}
+}
+.bd {
+	li {
+		padding-left: 15px;
+		color: #3e3f3f;
+		font-size: 14px;
+		line-height: 36px;
+		background: url("../img/dot.gif") 0 15px no-repeat;
+		/*.con {margin-left: -15px;}*/
+	}
+	.tit {font-size: 14px;}
+	.con {font-size: 12px;line-height: 22px;}
+}
+.iframe {height: 100%;width: 100%;}
+/*在线提交*/
+.online {
+	.tips {
+		padding: 3px 5px;
+		color: #7e7c77;
+		background: #fdf5e8;
+	}
+	.item {
+		padding: 10px 0;
+		line-height: 36px;
+		label {
+			width: 70px;
+			display: inline-block;
+			text-align: right;
+			vertical-align: top;
+		}
+		input[type="text"] {
+			text-indent: 5px;
+		}
+		select {
+			height: 36px;
+			width: 330px;
+			line-height: 36px;
+			border-radius: 6px;
+			border: 1px solid #dcdcdc;
+			text-indent: 5px;
+			background: #fff url("../img/droparr.jpg") 310px center no-repeat;
+			-webkit-appearance: none
+		}
+		.textarea {
+			height: 130px;
+			width: 326px;
+			border: 1px solid #dcdcdc;
+			border-radius: 6px;
+		}
+		.btn {padding: 0 35px;}
+	}
+	.upload input {width: 265px}
+	.pin input {width: 94px;}
+}
+/*资源*/
+.source {
+	.hd {border-bottom: 1px solid #dcdcdc;padding: 25px 0 5px;}
+	.bd {
+		padding: 10px 0;
+		overflow: hidden;
+		.item {
+			width: 216px;
+			padding: 10px;
+			float: left;
+			margin: 0 10px 10px 0;
+			border: 1px solid #dcdcdc;
+			border-radius: 5px;
+			&:nth-child(4n){
+				margin: 0 0 10px 0;
+			}
+		}
+		.img {
+			margin-bottom: 10px;
+			position: relative;
+			.mask {
+				height: 28px;
+				width: 214px;
+				display: block;
+				position: absolute;
+				bottom: 0;
+				color: #fff;
+				font-size: 0;
+				overflow: hidden;
+				background: rgba(0,0,0,0.5);
+				z-index: 5;
+				a {
+					height: 28px;
+					width: 107px;
+					display: inline-block;
+					
+					color: #fff;
+					font-size: 12px;
+					line-height: 28px;
+					text-align: center;
+					@include boxSizing;
+					&:first-child{
+						border-right: 1px solid #dcdcdc;
+					}
+				}
+			}
+			img {height: 127px;width: 214px;}
+		}
+	}
+		
 }
