修改help页面显示错误问题

--- a/frontend/sass/style.scss
+++ b/frontend/sass/style.scss
@@ -299,6 +299,7 @@ div.nav {
 	height: 43px;
 	border-bottom: 2px solid #b1b1b1;
 	padding-top: 12px;
+	overflow: hidden;
 	background: #fff;
 	li {
 		float: left;
