--- a/frontend/sass/style.scss
+++ b/frontend/sass/style.scss
@@ -367,6 +367,9 @@ div.nav {
 	}	
 }
 .main {
+	height: auto!important;
+	height: 600px;
+	min-height: 600px;
 	padding: 14px 0 14px 20px;
 	margin-left: 160px;
 	background: #fff;
