--- a/frontend/sass/style.scss
+++ b/frontend/sass/style.scss
@@ -11,6 +11,20 @@ $fgrey: #555454;
 	-ms-box-sizing: border-box;
 	box-sizing: border-box;
 }
+@mixin arr($site, $color) {
+	content:'';
+	height: 0;
+	width: 0;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	@if($site 'top'){
+		border-top: 5px solid $color;
+	}@else{
+		border-bottom: 5px solid $color;
+	}
+	position: absolute;
+	z-index: 6;
+}
 .fgrey {color: #3e3f3f;}
 .fgreen {color: #37b4b3;}
 .pleft20 {padding-left: 20px;}
@@ -36,8 +50,13 @@ img {vertical-align: middle;}
 .btn-green {
 	color: #fff;
 	background: #37b4b3;
+	&:hover {
+		color: #fff;
+		background: #249ea0;
+	}
 }
 .search {
+	position: relative;
 	.inpt-search {
 		width: 520px;
 		margin-right: 10px;
@@ -51,7 +70,7 @@ img {vertical-align: middle;}
 			padding: 0 3px;
 		}
 	}
-	select{
+	.select{
 		height: 36px;
 		width: 330px;
 		line-height: 36px;
@@ -60,7 +79,27 @@ img {vertical-align: middle;}
 		text-indent: 5px;
 		background: #fff url("../img/droparr.jpg") 310px center no-repeat;
 		-webkit-appearance: none
-	}		
+	}	
+	.search_drop {
+		width: 328px;
+		border: 1px solid #dcdcdc;
+		border-radius: 6px;
+		padding: 6px;
+		position: absolute;
+		top: 36px;
+		left: 0;
+		z-index: 6;
+		box-shadow: 10px 10px 5px #888;
+		a {
+			display: block;
+			height: 28px;
+			line-height: 28px;
+			padding-left: 10px;
+			&:hover {
+				background:#e0fbfb;
+			}
+		}
+	}	
 }
 .wrap {width: 1166px;margin: 0 auto;position: relative;z-index: 5;}
 .header {
@@ -68,7 +107,8 @@ img {vertical-align: middle;}
 	font-size: 14px;
 	background: #292929;
 	.top {
-		height: 36px;
+		height: 48px;
+		padding-top: 12px;
 		font-size: 14px;
 		line-height: 36px;
 		text-align: right;
@@ -77,28 +117,27 @@ img {vertical-align: middle;}
 		z-index: 6;
 		li {
 			display: inline-block;
-			width: 80px;
-			text-align: center;
+			width: 70px;
+			padding-left: 10px;
+			text-align: left;
 			position: relative;
 			&.help:after {
-				content:'';
-				height: 0;
-				width: 0;
-				border-left: 5px solid transparent;
-				border-right: 5px solid transparent;
-				border-top: 5px solid #fff;
-				position: absolute;
 				top: 15px;
-				right: 5px;
-				z-index: 6;
+				left: 47px;
+				@include arr('top', #fff);
 			}
 			&.on {
 				background: #37b4b3;
+				border-top-left-radius: 5px;
+				border-top-right-radius: 5px;
 			}
 		}
 		.drop {
 			width: 80px;
 			display: none;
+			border-bottom-left-radius: 5px;
+			border-bottom-right-radius: 5px;
+			padding-bottom: 5px;
 			position: absolute;
 			top: 36px;
 			left: 0;
@@ -106,6 +145,7 @@ img {vertical-align: middle;}
 			z-index: 7;
 			a {
 				display: block;
+				padding-left: 10px;
 				line-height: 30px;
 				&:hover{
 					color: #37b4b3;
@@ -142,6 +182,7 @@ img {vertical-align: middle;}
 	}
 	a {color: #fff;}
 }
+.index-header .top{height: 36px;padding: 0;}
 .banner {
 	height: 402px;
 	text-align: center;
@@ -343,14 +384,37 @@ div.nav {
 				text-overflow:ellipsis; 
 				-o-text-overflow:ellipsis;
 				overflow: hidden;
+				position: relative;
+				&.child span {
+					height: 0;
+				    width: 0;
+				    font-size: 0;
+				    line-height: 0;
+				    display: inline-block;
+				    border-left: 5px solid transparent;
+				    border-right: 5px solid transparent;
+				    border-bottom: 5px solid #3e3f3f;
+				    vertical-align: middle;
+				    margin-left: 10px;
+				    z-index: 6;
+				}
 				&.on {
 					border-left: 2px solid #37b4b3;
 					@include boxSizing;
 					background: #e0fbfb;
+					span {
+						border-bottom: 0;
+						border-top: 5px solid #3e3f3f;
+					}
 				}
 				&:hover {
 					background: #e7fafa;
 				}
+			}
+			li a {
+				color: #7a7a7a;
+				font-size: 12px;
+
 			}
 
 		}
@@ -367,7 +431,9 @@ div.nav {
 	}	
 }
 .main {
-	
+	min-height: 600px;
+	height: 600px;
+	height: auto!important;
 	padding: 14px 0 14px 20px;
 	margin-left: 160px;
 	background: #fff;
@@ -376,7 +442,7 @@ div.nav {
 .hd {
 	@extend .fgrey;
 	font-size: 14px;
-	font-weight: bold;
+	/*font-weight: bold;*/
 	line-height: 26px;
 	&.fgreen{padding: 20px 0 5px;}
 }
@@ -389,7 +455,18 @@ div.nav {
 		background: url("../img/dot.gif") 0 15px no-repeat;
 		/*.con {margin-left: -15px;}*/
 	}
-	.tit {font-size: 14px;}
+	.tit {
+		color: #636363;
+		font-size: 14px;
+		padding-bottom: 10px;
+		span.icon {
+			height: 16px;
+			width: 16px;
+			display: inline-block;
+			margin-right: 3px;
+			vertical-align: middle;
+		}
+	}
 	.con {font-size: 12px;line-height: 22px;}
 }
 .iframe {height: 100%;width: 100%;}
@@ -457,6 +534,8 @@ div.nav {
 				height: 28px;
 				width: 214px;
 				display: block;
+				border-bottom-left-radius: 4px;
+				border-bottom-right-radius: 4px;
 				position: absolute;
 				bottom: 0;
 				color: #fff;
@@ -477,10 +556,13 @@ div.nav {
 					&:first-child{
 						border-right: 1px solid #dcdcdc;
 					}
+					&:hover{color:#36b4b6;}
 				}
 			}
-			img {height: 127px;width: 214px;}
+			img {height: 127px;width: 214px;border-radius: 4px;}
 		}
-	}
-		
+	}	
+}
+.help-logo {
+	padding-top: 7px;
 }
