--- a/frontend/sass/style.scss
+++ b/frontend/sass/style.scss
@@ -29,6 +29,7 @@ $fgrey: #555454;
 .fgreen {color: #37b4b3;}
 .pleft20 {padding-left: 20px;}
 .b,.strong {font-weight: bold;}
+.hide {display: none;}
 a {color: #3e3f3f;}
 a:hover {color: #37b4b3;}
 input[type="text"] {
@@ -393,7 +394,7 @@ div.nav {
 				    display: inline-block;
 				    border-left: 5px solid transparent;
 				    border-right: 5px solid transparent;
-				    border-bottom: 5px solid #3e3f3f;
+				    border-top: 5px solid #3e3f3f;
 				    vertical-align: middle;
 				    margin-left: 10px;
 				    z-index: 6;
@@ -403,8 +404,8 @@ div.nav {
 					@include boxSizing;
 					background: #e0fbfb;
 					span {
-						border-bottom: 0;
-						border-top: 5px solid #3e3f3f;
+						border-top: 0;
+						border-bottom: 5px solid #3e3f3f;
 					}
 				}
 				&:hover {
@@ -564,5 +565,7 @@ div.nav {
 	}	
 }
 .help-logo {
-	padding-top: 7px;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
